# AeroTrack-Analytics-minio-elt

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.setup  README.md  backup.bundle  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt  seed_asistente_config.py  seed_ia_config.py  seed_rbac_e3.py  skills-lock.json
.claude/: settings.local.json
.github/workflows/: ci.yml
.kiro/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
app/: config.py  main.py
app/asistente_ia/: llm_client.py  rag.py  router.py
app/auditoria/: log.py
app/autenticacion/: router.py  service.py
app/cancelaciones/: clasificar_faa.py
app/clientes/: router.py
app/configuracion/: monitoreo.py  panel.py
app/dashboard/: kpis.py
app/modelo_dimensional/: router.py  service.py
app/pipeline_elt/: airflow_client.py  router.py
app/predictivo/: informe_ejecutivo.py  proyeccion_riesgo.py
dags/: aerotrack_elt_dag.py  aerotrack_tasks.py  config.py
docs/: diagrama_componentes.puml  diagrama_despliegue.puml
monitoring/: prometheus.yml
scripts/: 01_crear_coleccion_pb.py  02_cargar_csv_a_pb.py  03_extraer_pb_a_minio.py  04_transformar_dimensiones.py  config.py  configure_email.py  run_setup_inicial.py  setup_pocketbase_admin.py
tests/: conftest.py
webapp/: config.py  main.py  minio_client.py  requirements_web.txt  router_tablas.py
(+112 files in other folders)
